[package]
name = "cybersecurity_monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
mac_address = "1.1"
whoami = "1.4"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_Networking_WinHttp"
] }
uiautomation = "0.13"
ctrlc = "3.4"
url = "2.5"
regex = "1.10"
